--- a/src/bp-templates/bp-nouveau/common-styles/_bp_filters.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_filters.scss
@@ -225,8 +225,10 @@
 		line-height: 36px;
 	}
 
-	a, a:active, a:focus {
-	   outline: none;
+	a,
+	a:active,
+	a:focus {
+		outline: none;
 	}
 
 	a i {
