--- a/src/bp-templates/bp-nouveau/sass/buddypress.scss
+++ b/src/bp-templates/bp-nouveau/sass/buddypress.scss
@@ -441,3 +441,12 @@ Hello, this is the BuddyPress Nouveau stylesheet.
 // Import Layout classes
 
 @import "../common-styles/_bp_layouts";
+
+/**
+*-------------------------------------------------------------------------------
+* @section 10.0 - Forums classes
+*-------------------------------------------------------------------------------
+*/
+// Import forums styles
+
+@import "../common-styles/_bp-forums";
