--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -23,6 +23,7 @@ TABLE OF CONTENTS:
 4.0 Emails - Edit page
 5.0 Tools - BuddyPress
 6.0 Plugins page
+7.0 Miscellaneous
 ------------------------------------------------------------------------------*/
 
 /*------------------------------------------------------------------------------
@@ -594,4 +595,12 @@ body.post-type-bp-email .categorydiv label {
 
 #buddypress-update.not-shiny .update-message:before {
 	content: "\f534";
+}
+
+
+/*------------------------------------------------------------------------------
+ * 7.0 Miscellaneous
+ *----------------------------------------------------------------------------*/
+body.post-type-bp_ps_form .page-title-action {
+    display: none;
 }
