--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -685,6 +685,7 @@ body.buddypress article.page > .entry-header .entry-title {
 
 .buddypress-wrap .subnav-filters .component-filters {
   margin-top: 10px;
+  margin-left: 10px;
 }
 
 .buddypress-wrap .subnav-filters .feed {
@@ -772,11 +773,13 @@ body.buddypress article.page > .entry-header .entry-title {
   .buddypress-wrap .subnav-filters .group-act-search {
     float: left;
   }
+  .buddypress-wrap .subnav-filters .last {
+    margin-left: 0;
+  }
   .buddypress-wrap .subnav-filters .last,
   .buddypress-wrap .subnav-filters .component-filters {
     float: right;
     margin-top: 0;
-    margin-left: 0;
     width: auto;
   }
   .buddypress-wrap .subnav-filters .last select,
