--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -685,6 +685,7 @@ body.buddypress article.page > .entry-header .entry-title {
 
 .buddypress-wrap .subnav-filters .component-filters {
   margin-top: 10px;
+  margin-right: 10px;
 }
 
 .buddypress-wrap .subnav-filters .feed {
@@ -772,11 +773,13 @@ body.buddypress article.page > .entry-header .entry-title {
   .buddypress-wrap .subnav-filters .group-act-search {
     float: right;
   }
+  .buddypress-wrap .subnav-filters .last {
+    margin-right: 0;
+  }
   .buddypress-wrap .subnav-filters .last,
   .buddypress-wrap .subnav-filters .component-filters {
     float: left;
     margin-top: 0;
-    margin-right: 0;
     width: auto;
   }
   .buddypress-wrap .subnav-filters .last select,
