.select-wrap CSS

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
@@ -375,6 +375,13 @@ body.no-js {
 		}
 	} // close .select-wrap
 
+	.subnav-filters {
+
+		.select-wrap {
+			margin-right: 12px;
+		}
+	}
+
 	// Add a little on hover inset shadow for  subnav search & filters
 	.select-wrap,
 	.bp-search form {
