Profile search updates

--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1931,44 +1931,15 @@ form.ac-form .ac-reply-content input {
   }
 }
 
-.members-directory-content {
-  display: flex;
-  flex-flow: row wrap;
-}
-
-@media screen and (min-width: 46.8em) {
-  .members-directory-content {
-    flex-flow: row-reverse;
-  }
-  .members-directory-content .bp-profile-search-wrap {
-    flex: 0 0 220px;
-    margin-left: 20px;
-  }
-}
-
-.members-directory-content .members {
-  flex: 1;
-}
-
-@media screen and (max-width: 46.8em) {
-  .members-directory-content .bp-profile-search-wrap {
-    flex: 0 0 100%;
-  }
-}
-
-.members-directory-content .bp-field-wrap {
+.bp-profile-search-widget .bp-field-wrap {
   margin-bottom: 20px;
 }
 
-.members-directory-content .bps-description {
+.bp-profile-search-widget button,
+.bp-profile-search-widget input,
+.bp-profile-search-widget select,
+.bp-profile-search-widget textarea {
   font-size: 14px;
-  margin: 5px 0;
-  color: #767676;
-  font-style: italic;
-}
-
-#bp-profile-search-form-outer .widget-title {
-  margin-top: 0;
 }
 
 /**
