--- a/src/bp-templates/bp-nouveau/common-styles/_bp_members_loop.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_members_loop.scss
@@ -88,47 +88,16 @@ body:not(.logged-in) {
 	}
 }
 
-// Is current user - i.e it's me!
-.members-directory-content {
-	display: flex;
-	flex-flow: row wrap;
-
-	@include medium-up() {
-
-		flex-flow: row-reverse;
-
-		.bp-profile-search-wrap {
-			flex: 0 0 220px;
-			margin-left: 20px;
-		}
-	}
-
-	.members {
-		flex: 1;
-	}
-
-	@include medium-max() {
-
-		.bp-profile-search-wrap {
-			flex: 0 0 100%;
-		}
-	}
+.bp-profile-search-widget {
 
 	.bp-field-wrap {
 		margin-bottom: $marg-lrg;
 	}
 
-	.bps-description {
+	button,
+	input,
+	select,
+	textarea {
 		font-size: 14px;
-		margin: $marg-xsml 0;
-		color: #767676;
-		font-style: italic;
-	}
-}
-
-#bp-profile-search-form-outer {
-
-	.widget-title {
-		margin-top: 0;
 	}
 }
