Updates - Members Index and Members profile search styles

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_filters.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_filters.scss
@@ -213,13 +213,14 @@
 
 } // close .buddypress-wrap
 
-.grid-filters {
+.buddypress-wrap .grid-filters {
 	display: flex;
 	align-items: center;
 	border: 1px solid #eee;
 	height: 36px;
 
 	a {
+		border-bottom: 0;
 		color: #ccc;
 		padding: 0 6px;
 		line-height: 36px;
