--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
@@ -356,6 +356,7 @@ body.no-js {
 		}
 
 		span.select-arrow {
+			font-size: 10px;
 			display: inline-block;
 			position: relative;
 			z-index: 0;
