--- a/src/bp-templates/bp-nouveau/common-styles/_bp_generic_and_typography.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_generic_and_typography.scss
@@ -103,11 +103,11 @@ body.buddypress { // add weight
 		h4,
 		h5,
 		h6 {
-			clear: none;
+			//clear: none;
 			// some themes set massive margins ensure we avoid these in bp elements
-			margin: 1em 0;
+			//margin: 1em 0;
 			// some themes add padding top lets manage that generically sitewide
-			padding: 0;
+			//padding: 0;
 		}
 	}
 }
