--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
@@ -85,7 +85,8 @@
 		[data-bp-search] input[type="search"],
 		[data-bp-search] input[type="text"],
 		.groups-members-search input[type="search"],
-		.groups-members-search input[type="text"] {
+		.groups-members-search input[type="text"],
+		.bp-profile-search-widget input[type="search"] {
 			background: $off-white;
 			border: 1px solid $form-border-color;
 			border-radius: 0;
