--- a/src/bp-templates/bp-nouveau/common-styles/_bp_members_loop.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_members_loop.scss
@@ -134,6 +134,8 @@ body:not(.logged-in) {
 
 	.bps-form-title {
 		font-size: 13px;
+		font-weight: 400;
+		color: $light-text;
 		line-height: 1;
 		margin-top: 0;
 		margin-bottom: 20px;
@@ -141,5 +143,6 @@ body:not(.logged-in) {
 
 	label {
 		font-weight: 600;
+		font-size: 15px;
 	}
 }
